--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding{
+        enabled=true
+    }
 
 }
 
@@ -32,11 +35,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
     implementation 'com.karumi:dexter:6.2.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    implementation 'com.android.support:design:29.0.0'
+    implementation 'com.android.support:support-v4:29.0.0'
 
 }
